[gd_scene load_steps=6 format=3 uid="uid://cvnrblac3eang"]

[ext_resource type="Script" uid="uid://063t01kurld" path="res://scripts/utils/media_icon.gd" id="1_gmtuu"]
[ext_resource type="Texture2D" uid="uid://1u7nd2yiclxc" path="res://assets/media/cat.webp" id="2_28y8i"]
[ext_resource type="Shader" uid="uid://burwhdjxj6lv7" path="res://shadercode/floaty_fuck.gdshader" id="3_0thym"]
[ext_resource type="Script" uid="uid://ckwntkis6w5lr" path="res://scripts/utils/floaty_fuck_sprite2d.gd" id="4_gqsss"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nto4e"]
resource_local_to_scene = true
shader = ExtResource("3_0thym")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[node name="MediaIcon" type="Control" node_paths=PackedStringArray("icon_rect", "label")]
custom_minimum_size = Vector2(120, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gmtuu")
icon_rect = NodePath("FlowDown/Icon")
label = NodePath("FlowDown/Name")
image = ExtResource("2_28y8i")
image_name = "cat.jpg"

[node name="FlowDown" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 143.0
offset_bottom = 97.0

[node name="Icon" type="Sprite2D" parent="FlowDown"]
material = SubResource("ShaderMaterial_nto4e")
position = Vector2(69, 32.99999)
scale = Vector2(0.101562485, 0.08228575)
texture = ExtResource("2_28y8i")
script = ExtResource("4_gqsss")

[node name="Name" type="RichTextLabel" parent="FlowDown"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 10
bbcode_enabled = true
text = "cat.jpg"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
